# command-signatures

./: .gitignore  .prettierignore  .prettierrc.json  AGENTS.md  Cargo.toml  LICENSE.md  README.md  hello_world_credential_test_1.txt  hello_world_credential_test_2.txt  package-lock.json  package.json  rust-toolchain.toml
command-signatures/: Cargo.toml
command-signatures/json/: ack.json  act.json  adb.json  afplay.json  aftman.json  ag.json  agrippa.json  amplify.json  ansible-config.json  ansible-doc.json  ansible-galaxy.json  ansible-lint.json  ansible-playbook.json  ansible.json  appwrite.json  apt-get.json  apt.json  aptitude.json  arch.json  asdf.json  assimp.json  atlas.json  autojump.json  awk.json  aws.json  az.json  babel.json  banner.json  base32.json  base64.json  basename.json  basenc.json  bat.json  bazel.json  bc.json  black.json  blitz.json  brew.json  build-storybook.json  bun.json  (+440 more)
command-signatures/json-autogenerated/: Add-Content.json  Add-History.json  Add-Member.json  Add-Type.json  Clear-Content.json  Clear-History.json  Clear-Item.json  Clear-ItemProperty.json  Clear-Variable.json  Compare-Object.json  Convert-Path.json  ConvertFrom-Csv.json  ConvertFrom-Json.json  ConvertFrom-Markdown.json  ConvertFrom-SecureString.json  ConvertFrom-StringData.json  ConvertTo-Csv.json  ConvertTo-Html.json  ConvertTo-Json.json  ConvertTo-SecureString.json  ConvertTo-Xml.json  Copy-Item.json  Copy-ItemProperty.json  Debug-Job.json  Debug-Process.json  Debug-Runspace.json  Disable-ExperimentalFeature.json  Disable-PSBreakpoint.json  Disable-RunspaceDebug.json  Enable-ExperimentalFeature.json  Enable-PSBreakpoint.json  Enable-RunspaceDebug.json  Enter-PSHostProcess.json  Enter-PSSession.json  Exit-PSHostProcess.json  Exit-PSSession.json  Export-Alias.json  Export-Clixml.json  Export-Csv.json  Export-FormatData.json  (+214 more)
command-signatures/json/@withfig/: autocomplete-tools.json
command-signatures/json/autogenerated/: Add-Content.json  Add-Member.json  Add-Type.json  Compare-Object.json  Convert-Path.json  ConvertFrom-Markdown.json  ConvertFrom-StringData.json  ConvertTo-Xml.json  Copy-Item.json  Disable-ExperimentalFeature.json  Disable-PSBreakpoint.json  Enable-ExperimentalFeature.json  Enable-RunspaceDebug.json  Enter-PSSession.json  Export-Alias.json  Export-Csv.json  Find-Package.json  Find-PackageProvider.json  Format-Custom.json  Format-Table.json  Get-Alias.json  Get-Clipboard.json  Get-FileHash.json  Get-FormatData.json  Get-Host.json  Get-InstalledPSResource.json  Get-Item.json  Get-Location.json  Get-MarkdownOption.json  Get-PSBreakpoint.json  Get-PSProvider.json  Get-PSScriptFileInfo.json  Get-PSSession.json  Get-PackageProvider.json  Get-PackageSource.json  Get-Process.json  Get-Random.json  Get-Runspace.json  Get-ScriptAnalyzerRule.json  Get-TraceSource.json  (+70 more)
command-signatures/json/aws/: accessanalyzer.json  acm-pca.json  acm.json  alexaforbusiness.json  amp.json  amplify.json  amplifybackend.json  apigateway.json  apigatewaymanagementapi.json  apigatewayv2.json  appconfig.json  appflow.json  appintegrations.json  application-autoscaling.json  application-insights.json  appmesh.json  appstream.json  appsync.json  athena.json  auditmanager.json  autoscaling-plans.json  autoscaling.json  backup.json  batch.json  braket.json  budgets.json  ce.json  chime.json  cloud9.json  clouddirectory.json  cloudformation.json  cloudfront.json  cloudhsm.json  cloudhsmv2.json  cloudsearch.json  cloudsearchdomain.json  cloudtrail.json  cloudwatch.json  codeartifact.json  codebuild.json  (+227 more)
command-signatures/json/docker/: compose-build.json  compose-config.json  compose-create.json  compose-down.json  compose-events.json  compose-exec.json  compose-images.json  compose-kill.json  compose-logs.json  compose-pause.json  compose-port.json  compose-ps.json  compose-pull.json  compose-restart.json  compose-rm.json  compose-run.json  compose-start.json  compose-stop.json  compose-up.json
command-signatures/json/dotnet/: dotnet-add.json  dotnet-build-server.json  dotnet-build.json  dotnet-clean.json  dotnet-format.json  dotnet-help.json  dotnet-list.json  dotnet-migrate.json  dotnet-msbuild.json  dotnet-new.json  dotnet-nuget.json  dotnet-pack.json  dotnet-publish.json  dotnet-remove.json  dotnet-restore.json  dotnet-run.json  dotnet-sln.json  dotnet-store.json  dotnet-test.json  dotnet-tool.json
command-signatures/json/example/: git_push.json  trigger.json
command-signatures/json/fig/: fig-legacy.json  fig@1.0.52.json
command-signatures/json/gcloud/: access-context-manager.json  active-directory.json  ai-platform.json  anthos.json  apigee.json  app.json  artifacts.json  asset.json  auth.json  bigtable.json  builds.json  cheat-sheet.json  cloud-shell.json  components.json  composer.json  config.json  container.json  data-catalog.json  dataflow.json  dataproc.json  datastore.json  debug.json  deployment-manager.json  dns.json  docker.json  domains.json  endpoints.json  feedback.json  filestore.json  firebase.json  firestore.json  functions.json  game.json  healthcare.json  help.json  iam.json  iap.json  identity.json  info.json  init.json  (+27 more)
command-signatures/json/php/: artisan.json  please.json
command-signatures/json/python/: http.server.json
command-signatures/src/: assets.rs  lib.rs  overrides.rs
command-signatures/src/generators/: apt.rs  apt_get.rs  asdf.rs  aws.rs  aws_tests.rs  az.rs  bazel.rs  bosh.rs  brew.rs  bun.rs  cargo.rs  claude.rs  codex.rs  common.rs  conda.rs  defaults.rs  dnf.rs  docker.rs  docker_compose.rs  dotnet.rs  firebase.rs  flutter.rs  gcloud.rs  gh.rs  git.rs  go.rs  gt.rs  heroku.rs  ip.rs  kill.rs  killall.rs  kubecolor.rs  kubectl.rs  kubectx.rs  kubens.rs  lsof.rs  make.rs  man.rs  mod.rs  nextflow.rs  (+31 more)
completion-metadata/: Cargo.toml
completion-metadata/src/: command_builder.rs  fig_types.rs  lib.rs  rust_generator.rs  signature.rs
signatures/command-signatures-2/: Cargo.toml
signatures/command-signatures-3/: Cargo.toml  build.rs
(+1564 files in other folders)
