[package]
name = "warp-command-signatures"
version = "0.1.0"
edition = "2021"

[dependencies]
warp-completion-metadata = {path = "../completion-metadata"}
command-signatures-1 = {path = "../signatures/command-signatures-1"}
command-signatures-2 = {path = "../signatures/command-signatures-2"}
command-signatures-3 = {path = "../signatures/command-signatures-3"}
command-signatures-4 = {path = "../signatures/command-signatures-4"}
command-signatures-5 = {path = "../signatures/command-signatures-5"}
command-signatures-6 = {path = "../signatures/command-signatures-6"}

lazy_static = "1.4.0"
log = "0.4"
regex = "1.5.4"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
serde_with = "2.0.1"
itertools = "0.10.0"

[features]
json-embed = ["command-signatures-1/json-embed", "command-signatures-2/json-embed", "command-signatures-3/json-embed", "command-signatures-4/json-embed", "command-signatures-5/json-embed", "command-signatures-6/json-embed"]


