[package]
name = "warp-completion-metadata"
version = "0.1.0"
authors = ["Warp Team <dev@warp.dev>"]
edition = "2021"

[dependencies]
anyhow = "1.0"
convert_case = "0.4.0"
memmap = "0.7.0"
uneval = {git = "https://github.com/warpdotdev/uneval", rev = "df4d9fad372aedc447e6f93ca0f930fabaf9dd1a"}
walkdir = "2.3.2"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
serde_with = "1.11.0"
log = "0.4"
