[package]
name = "new-command-signatures-1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp-completion-metadata = {path = "../../../completion-metadata"}

[build-dependencies]
anyhow = "1.0"
warp-completion-metadata = {path = "../../../completion-metadata"}
